# meson

./: run_unittests.py
mesonbuild/: common.py  interpreter.py
mesonbuild/dependencies/: base.py
test cases/unit/89 pkgconfig modules selection/: meson.build  meson_options.txt
